# SKILLNAV

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LIVRABLES.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
api/: config.py  main.py
api/db/: elastic.py  mongo.py
api/ml/: ner_pipeline.py
api/models/: common.py
api/routes/: companies.py  comparative.py  health.py  jobs.py  ner.py  overview.py  search.py  skills.py
data/: graph_edges.csv  graph_nodes.csv
data/curricula/: ensa-agadir-sdbia.json  ensa-berrechid-isibd.json  ensa-eljadida-2ite.json  ensa-fes-isdia.json  ensa-khouribga-iid.json  ensa-oujda-idscc.json  ensa-safi-idia.json  ensa-tetouan-sdbia.json
data/ner/: ner_gold_set.json  tableau_n2_1.md
data/ner/predictions/: bert_multilingual.json  camembert.json  distilbert.json  gliner.json
docs/: ANALYSES_INSPIRATION.md  API_GUIDE.md  CHARTE_GRAPHIQUE_SKILLNAV.docx  CHARTE_GRAPHIQUE_SKILLNAV.md  INGESTION_GUIDE.md  MODELISATION_GUIDE.md  NER_COMPARISON_GUIDE.md  NOTEBOOK_00_ANNEXE_CODE.md  PLAN_SOUTENANCE.md  PRD.md  PRD_CONDENSE.md  PRD_CONDENSE_SKILLNAV.docx  RAPPORT_METHODOLOGIQUE.md  RGPD_DPIA.md  Rapport.md  SUJET_M242.md
docs/RAPPORT_FINAL/: RAPPORT_FINAL_WEB_MINING.md  RAPPORT_FINAL_WEB_MINING.tex  suivie.md
docs/RAPPORT_FINAL/Archives/: suivie.md
docs/archive/: CHARTE_GRAPHIQUE_OCTAO.md  PRD_OCTAO_v1.2.md
docs/for Rapport/: Justification_Architecture_NoSQL.md
docs/handoff/: SKILLNAV_Guide_Modelisation_Structure_Mining.docx
docs/tools/: README.md  apify.md  firecrawl.md  playwright.md
livrables/02-base-de-donnees-hybride/: README.md
livrables/02-base-de-donnees-hybride/queries/: elasticsearch_examples.md  mongo_examples.md  neo4j_examples.cypher
livrables/02-base-de-donnees-hybride/schemas/: elasticsearch_index.md  mongo_collections.md  neo4j_graph_model.md
livrables/02-base-de-donnees-hybride/screenshots/: README.md
livrables/03-pipeline-ia/: README.md
livrables/03-pipeline-ia/metrics/: community_metrics.md  ner_evaluation.json
livrables/03-pipeline-ia/notebooks/: README.md
livrables/03-pipeline-ia/studies/: 01-ner-comparison.md  02-community-detection.md  03-forecasting.md  04-emergence.md
notebooks/: 00_market_analysis.ipynb  00_setup_dev.ipynb  01_data_quality.ipynb  01_visualisations.ipynb  02_graph_starter.ipynb  02_ner_comparison.ipynb  03_graph_analysis.ipynb  03_ner_improvement.ipynb  04_forecasting_comparison.ipynb  05_dashboard_data_prep.ipynb  06_gap_analysis_market_vs_curriculum.ipynb  06b_gap_analysis_multi_ensa.ipynb
scripts/: build_charte_docx.mjs  build_dashboard_overview.py  build_dataset.py  build_forecast_pipeline_schema.py  build_gap_analysis.py  build_gap_figures.py  build_graph_starter_notebook.py  build_handoff_doc.js  build_hybrid_db_architecture.py  build_market_analysis_notebook.py  build_ner_improvement_notebook.py  build_ner_notebook.py  build_ner_snapshot.py  build_pipeline_ia_overview.py  build_prd_docx.mjs  build_skills_distribution.py  build_top_skills.py  build_visualisations_notebook.py  export_notebook_to_md.py  push_graph_to_neo4j.py  run_notebook.py  skillnav_eda.py
scripts/ingestion/: ingest_elasticsearch.py  ingest_mongodb.py
scripts/ner/: 01_build_gold_set.py  02_run_inference.py  03_evaluate.py  config.py
skillnav/: __init__.py  cli.py  config.py
skillnav/analysis/: __init__.py  loaders.py
skillnav/api/: __init__.py
skillnav/comparative_studies/: __init__.py
skillnav/db/: __init__.py
skillnav/db/elasticsearch/: __init__.py
skillnav/db/mongodb/: __init__.py
skillnav/db/neo4j/: __init__.py  client.py
skillnav/pipelines/: __init__.py
skillnav/pipelines/content_mining/: __init__.py
skillnav/pipelines/curriculum_mining/: __init__.py  orchestrator.py  parser.py
skillnav/pipelines/curriculum_mining_multi/: __init__.py  normalizer.py  orchestrator.py  parser.py  skill_extractor.py
skillnav/pipelines/structure_mining/: __init__.py  communities.py  graph_builder.py  pagerank.py
skillnav/pipelines/usage_mining/: __init__.py  arima_model.py  comparison.py  lstm_model.py  prophet_model.py  series_builder.py
skillnav/schemas/: __init__.py  curriculum.py  curriculum_multi_ensa.py  graph.py  job.py  ner.py  timeseries.py
skillnav/schemas/converters/: __init__.py  to_neo4j.py
skillnav/scrapers/: __init__.py
skillnav/scrapers/apify/: __init__.py
skillnav/scrapers/builtin/: __init__.py
skillnav/scrapers/emploitic/: __init__.py
skillnav/scrapers/indeed/: __init__.py
skillnav/scrapers/rekrute/: __init__.py
skillnav/scrapers/weak_signals/: __init__.py
sources/: registry.yaml
sources/collected/: .gitignore  COLLECTION_PROTOCOL.md  README.md  _audit_ma_quality.py  _eliminate_incomplete_postings.py  _enrich_ma_structured.py  _restructure_ma_to_3_layers.py
sources/collected/_schema/: job_posting.schema.json  posting.template.md
sources/collected/anapec/: README.md  source.yaml
sources/collected/glassdoor-ma/: README.md  _apify_recover.py  _firecrawl_recover.py  _generate_postings.py  _list_incomplete_urls.py  _parse_glassdoor_to_postings.py  source.yaml
sources/collected/rekrute/: README.md  (+1 more)
sources/curricula/: .gitignore  REGISTRY.md  REGISTRY_MULTI_ENSA.md  registry_multi_ensa.yaml
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_curriculum_multi_parser.py  test_curriculum_multi_schema.py  test_curriculum_multi_skill_extractor.py  test_curriculum_parser.py  test_curriculum_schema.py  test_curriculum_skill_extractor.py
web/: .env.example  .eslintrc.json  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
(+7768 files in other folders)
